# ch10-cloud-agent-patterns

./: .env.example  .gitignore  README.md  cloudbuild.yaml  cloudbuild_broken.yaml  pyproject.toml  setup-guide.md  validate_env.py  validate_gcp.py  validate_rag.py  validate_services.py
agent_service/: Dockerfile  __init__.py  agent_factory.py  app.py  config.py
broken_agent/: Dockerfile  __init__.py  app.py  run_stateless_failure.py  stateful_agent.py
fixed_agent/: __init__.py  stateless_agent.py
retrieval_service/: Dockerfile  __init__.py  app.py  rag_client.py
scripts/: deploy_service_a.sh  deploy_service_b.sh
test_client/: __init__.py  query.py
workflow/: 01-local-failure.md  02-concurrent-workers.md  03-stateless-fix.md  04-retrieval-service.md  05-end-to-end-cloud-run.md  06-env-wiring.md  07-broken-vs-fixed.md  README.md  all-diagrams.md  setup-guide.md
