[project]
name = "ch10-cloud-agent-patterns"
version = "1.0.0"
description = "Chapter 10: From Local Triumph to Cloud Failure — enterprise knowledge-base agent on Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core agent runtime
    "google-adk>=1.7.0,<2.0.0",
    "google-cloud-aiplatform[adk]>=1.92.0,<2.0.0",
    # Retrieval layer — vertexai.preview.rag
    "vertexai>=1.92.0,<2.0.0",
    # API layer
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    # Observability
    "structlog>=24.1.0,<25.0.0",
    "opentelemetry-sdk>=1.24.0,<2.0.0",
    # Validation helpers
    "google-cloud-resource-manager>=1.12.0,<2.0.0",
    # Env loading (scripts and local development)
    "python-dotenv>=1.1.0,<2.0.0",
    # Google auth (identity tokens for service-to-service calls)
    "google-auth>=2.29.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "broken_agent",
    "fixed_agent",
    "retrieval_service",
    "agent_service",
    "test_client",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
